crates/vize_atelier_sfc/src/compile_script/inline/snapshots/vize_atelier_sfc__compile_script__inline__tests__tests__declare_global_not_in_setup_body_ts.snap
---
source: crates/vize_atelier_sfc/src/compile_script/inline/tests.rs
expression: output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { ref } from 'vue'

declare global {
  interface Window {
    EyeDropper: any
  }
}


export default /*@__PURE__*/_defineComponent({
  __name: 'TestComponent',
  setup(__props) {

const handleClick = () => {
  console.log('click')
}
const x = ref(0)

return (_ctx: any,_cache: any) => {
  return null
}
}

})
