crates/vize_atelier_sfc/src/compile_script/inline/snapshots/vize_atelier_sfc__compile_script__inline__tests__tests__define_props_assignment_value_on_next_line.snap
---
source: crates/vize_atelier_sfc/src/compile_script/inline/tests.rs
expression: output.as_str()
---
import { computed } from "vue";
export default {
  __name: "TestComponent",
  props: {
    msg: { type: String },
    count: { type: Number }
  },
  setup(__props) {
    const props = __props;
    const doubled = computed(() => props.count * 2);
    return (_ctx, _cache) => {
      return null;
    };
  }
};
