crates/vize_atelier_sfc/src/compile_script/inline/snapshots/vize_atelier_sfc__compile_script__inline__tests__tests__define_props_destructure_value_on_next_line.snap
---
source: crates/vize_atelier_sfc/src/compile_script/inline/tests.rs
assertion_line: 375
expression: output.as_str()
---
import { computed } from "vue";
export default {
  __name: "TestComponent",
  props: {
    type: {
      type: String,
      required: true
    },
    title: {
      type: String,
      required: true
    },
    startTime: {
      type: String,
      required: true
    }
  },
  setup(__props) {
    const accentColor = computed(() => __props.type === "event" ? "primary" : "secondary");
    return (_ctx, _cache) => {
      return null;
    };
  }
};
