crates/vize_atelier_sfc/src/compile_script/inline/snapshots/vize_atelier_sfc__compile_script__inline__tests__tests__define_props_with_trailing_semicolon.snap
---
source: crates/vize_atelier_sfc/src/compile_script/inline/tests.rs
expression: output.as_str()
---
import { ref } from "vue";
export default {
  __name: "TestComponent",
  props: { msg: { type: String } },
  setup(__props) {
    const count = ref(0);
    return (_ctx, _cache) => {
      return null;
    };
  }
};
