crates/vize_atelier_sfc/src/compile_script/inline/snapshots/vize_atelier_sfc__compile_script__inline__tests__tests__define_slots_assignment_value_on_next_line.snap
---
source: crates/vize_atelier_sfc/src/compile_script/inline/tests.rs
expression: output.as_str()
---
import { useSlots as _useSlots } from "vue";
export default {
  __name: "TestComponent",
  setup(__props) {
    const slots = _useSlots();
    const hasDefault = !!slots.default;
    return (_ctx, _cache) => {
      return null;
    };
  }
};
