crates/vize_atelier_sfc/src/compile_script/inline/snapshots/vize_atelier_sfc__compile_script__inline__tests__tests__destructure_with_multiline_function_call.snap
---
source: crates/vize_atelier_sfc/src/compile_script/inline/tests.rs
expression: output.as_str()
---
import { ref, toRef } from "vue";
import { useSomething } from "./useSomething";
export default {
  __name: "TestComponent",
  setup(__props) {
    const fileInputRef = ref();
    const { handleSelect, handleChange } = useSomething(fileInputRef, {
      onError: (e) => console.log(e),
      onSuccess: () => console.log("ok")
    }, toRef(() => "test"));
    const other = ref(1);
    return (_ctx, _cache) => {
      return null;
    };
  }
};
