crates/vize_atelier_sfc/src/compile_script/inline/snapshots/vize_atelier_sfc__compile_script__inline__tests__tests__export_type_generates_props_declaration.snap
---
source: crates/vize_atelier_sfc/src/compile_script/inline/tests.rs
expression: output.as_str()
---
export default {
  __name: "TestComponent",
  props: {
    id: { type: String },
    label: { type: String },
    routeName: { type: String },
    disabled: {
      type: Boolean,
      required: false
    }
  },
  setup(__props) {
    return (_ctx, _cache) => {
      return null;
    };
  }
};
