crates/vize_atelier_sfc/src/compile_script/inline/snapshots/vize_atelier_sfc__compile_script__inline__tests__tests__export_type_with_arrow_function_member.snap
---
source: crates/vize_atelier_sfc/src/compile_script/inline/tests.rs
expression: output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { computed } from 'vue'
import { useRoute } from 'vue-router'

export type MenuSelectorOption = {
  label: string
  onClick: () => void
}


export default /*@__PURE__*/_defineComponent({
  __name: 'TestComponent',
  setup(__props) {

const route = useRoute()
const heading = computed(() => route.name)

return (_ctx: any,_cache: any) => {
  return null
}
}

})
